--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,36 @@
     transform: rotate(360deg);
   }
 }
+
+.adaptiveGrid {
+  display: flex;
+}
+
+.searchItem {
+  min-width: 300px;
+  max-width: 300px;
+}
+
+@media screen and (max-width: 655px) {
+  .adaptiveGrid {
+    flex-direction: column;
+    justify-content: 'center'; 
+    margin: auto;
+    padding-top: 13px;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 370px) {
+  .searchItem {
+    min-width: '70vw';
+    max-width: '70vw';
+    max-height: '50px';
+  }
+  .navButton {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    text-align: center;
+    align-items: center
+  }
+}
