--- a/src/App.css
+++ b/src/App.css
@@ -27,8 +27,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     text-align: center;
-    align-items: center
-  }
+    align-items: center;
+   }
 }
 
 @media screen and (max-width: 1920) {
@@ -46,4 +46,8 @@
     justify-content: space-around;
 
   }
+}
+
+.MuiButton-outlined {
+  padding: 0px;
 }
